@@ -92,3 +92,13 @@ COMMENT ON COLUMN analysisfeature.normscore IS 'This is the rawscore but
     following semantics: * normscores are floating point numbers >= 0,
     * high normscores are better than low one. For most programs, it would be sufficient to make the normscore the same as this rawscore, providing these semantics are satisfied.';
 COMMENT ON COLUMN analysisfeature.rawscore IS 'This is the native score generated by the program; for example, the bitscore generated by blast, sim4 or genscan scores. One should not assume that high is necessarily better than low.';
+
+
+CREATE TABLE analysisfeatureprop (
+    analysisfeatureprop_id SERIAL PRIMARY KEY,
+    analysisfeature_id INTEGER NOT NULL REFERENCES analysisfeature(analysisfeature_id) ON DELETE CASCADE DEFERRABLE INITIALLY DEFERRED,
+    type_id INTEGER NOT NULL REFERENCES cvterm(cvterm_id) ON DELETE CASCADE DEFERRABLE INITIALLY DEFERRED,
+    value TEXT,
+    rank INTEGER NOT NULL,
+    CONSTRAINT analysisfeature_id_type_id_rank UNIQUE(analysisfeature_id, type_id, rank)
+);
